--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Emrah'in Klavyesi</title>
     <link rel="icon" type="image/x-icon" href="/img/favico.png" />
   </head>
-  <link rel="stylesheet" href="/css/grid.css" />
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="./css/grid.css" />
+  <link rel="stylesheet" href="./css/style.css" />
   <body>
     <div id="counters">
       <div class="container">
