--- a/index.html
+++ b/index.html
@@ -69,6 +69,6 @@
     </div>
     <!-- counters# -->
 
-    <script src="/js/style.js"></script>
+    <script src="./js/style.js"></script>
   </body>
 </html>
